<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>direct_lidar_odometry</name>
  <version>1.4.3</version>
  <description>Direct LiDAR Odometry: Fast Localization with Dense Point Clouds</description>

  <maintainer email="kennyjchen@ucla.edu">Kenny J. Chen</maintainer>
  <maintainer email="btlopez@ucla.edu">Brett T. Lopez</maintainer>

  <author>Kenny J. Chen</author>
  <author>Brett T. Lopez</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>livox_ros_driver2</depend>


  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
